# nix-example

./: .gitignore  Dockerfile  ISSUES.org  README.md  README.org  TODO.org  build.nix  cabal.project  default.nix  log  shell.nix  stack.yaml
internal/: README.md  README.org  docs-generate  setup.org  test-run
modules/app/: example-app.cabal
modules/bundle/: builder.sh  default.nix
modules/ekg-assets/: builder.sh  default.nix
modules/example-app-compact/: builder.sh  default.nix
modules/example-lib/: example-lib.cabal
modules/lib/: example-lib.cabal
modules/pkgs-make/: default.nix  haskell.nix
modules/stack/: default.nix  stack.nix
pkgs-make/: README.md  README.org  config.nix  default.nix  tools.nix
pkgs-make/haskell/: default.nix
pkgs-make/lib/: default.nix  haskell.nix
pkgs-make/python/: default.nix  shellHook.nix
pkgs-make/variant/: variantMake.nix
run/: README.md  README.org  array  common.sh  docker-nix  example-nix-run  nix-project-run  run-docker-image  run-docker-tarball  run-licenses  run-native
run/nix/: common.nix  default.nix  docker-image.nix  docker-tarball.nix  licenses.nix  nix-run.nix  run-docker.nix  run.nix
support/: CONVENTIONS.md  CONVENTIONS.org  README.md  README.org  TESTING.org  dependencies-upgrade  docs-generate  install-local  links.org  pull-local  setup.org  test-run
support/nix/: default.nix  sources-unified.nix  sources.json
tools/: README.md  README.org
tools/direnv/: README.md  README.org  (+1 more)
tutorials/2-haskell/application/: example-haskell-app.cabal
tutorials/2-haskell/application/src/: Main.hs
(+165 files in other folders)
