name: example-haskell-app
version: 0.1.0.0
build-type: Simple
license: BSD3
cabal-version: >=1.10

executable example-haskell
    hs-source-dirs: src
    main-is: Main.hs
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
    build-depends: base, text, snowflake, example-haskell-lib
    default-language: Haskell2010
